Add homepage URL and fix Vite `base` config for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "collegium-website",
+  "homepage": "https://OmerCicek87.github.io/collegium-website/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
